--- a/app/index.html
+++ b/app/index.html
@@ -92,10 +92,8 @@
         </div>
 
         <section id="video-intro">
-            <div class="container-fluid">
-                <div class="row">
-                    <iframe src="https://www.youtube.com/embed/AWh9gESAOO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/AWh9gESAOO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
 
