--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,22 @@
 <!doctype html>
-<html lang="">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>test</title>
+    <title>Skysandvolley</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
-    <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
+
     <!-- build:css styles/vendor.css -->
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.theme.default.min.css" />
+    <!-- endbuild -->
+
+    <!-- build:css styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700" rel="stylesheet">
@@ -26,14 +28,7 @@
           <div class="pushy-content">
               <ul>
                   <li class="pushy-link"><a href="#chi-siamo">#SKYSANDVOLLEY</a></li>
-                  <li class="pushy-submenu">
-                      <button>Tornei</button>
-                      <ul>
-                          <li class="pushy-link"><a href="#">Skysand</a></li>
-                          <li class="pushy-link"><a href="#">U19</a></li>
-                          <li class="pushy-link"><a href="#">U15</a></li>
-                      </ul>
-                  </li>
+                  <li class="pushy-link"><a href="#">U16</a></li>
                   <li class="pushy-link"><a href="#location">LOCATION</a></li>
               </ul>
           </div>
@@ -61,13 +56,8 @@
                                   <li class="nav-item">
                                       <a class="nav-link" href="#chi-siamo">#SKYSANDVOLLEY</a>
                                   </li>
-                                  <li class="dropdown">
-                                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tornei <b class="caret"></b></a>
-                                      <ul class="dropdown-menu">
-                                          <li><a href="#">Skysand</a></li>
-                                          <li><a href="#">U19</a></li>
-                                          <li><a href="#">U15</a></li>
-                                      </ul>
+                                  <li class="nav-item">
+                                      <a class="nav-link" href="#">U16</a>
                                   </li>
                                   <li class="nav-item">
                                       <a class="nav-link" href="#location">LOCATION</a>
@@ -104,11 +94,10 @@
                         <h1>#SKYSANDVOLLEY</h1>
                         <h2>MONTEPREMI per il valore di € 1000</h2>
                         <p>Grandi novità per l'estate 2019. Il montepremi complessivo sarà del valore di € 1000.
-                            Da quest'anno il circuito estivo Marinamore Skysandvolley prevede 3 differenti categorie:</p>
+                            Da quest'anno il circuito estivo Marinamore Skysandvolley prevede 2 differenti categorie:</p>
                         <ul>
                             <li>Skysand - 3x3 M/F e 2x2 F </li>
-                            <li>U19 - 2x2 M/F (max classe 2000)</li>
-                            <li>U15 - 3x3 M (max classe 2004)
+                            <li>U16 - 3x3 M (max classe 2003)
                         </ul>
 
                         <p>
@@ -135,14 +124,11 @@
         <section id="tornei">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <a href="/skysand.html"><img src="images/torneo_principale.jpg" alt="skysand" class="img-fluid"></a>
                     </div>
-                    <div class="col-md-4">
-                        <a href="#"><img src="images/u19.jpg" alt="u19" class="img-fluid"></a>
-                    </div>
-                    <div class="col-md-4">
-                        <a href="#"><img src="images/u15.jpg" alt="u15" class="img-fluid"></a>
+                    <div class="col-md-6">
+                        <a href="#"><img src="images/u16.jpg" alt="u15" class="img-fluid"></a>
                     </div>
                 </div>
             </div>
