--- a/app/index.html
+++ b/app/index.html
@@ -113,8 +113,8 @@
                             <li>5° - 10 punti</li>
                             <li>6° - 8 punti</li>
                             <li>7° - 6 punti</li>
-                            <li>8° - 6 punti</li>
-                            <li>Altre posizioni: 2 punti</li>
+                            <li>8° - 4 punti</li>
+                            <li>Altre posizioni: 1 punto</li>
                         </ul>
                     </div>
                 </div>
