--- a/app/skysand.html
+++ b/app/skysand.html
@@ -27,9 +27,9 @@
       <nav class="pushy pushy-left">
           <div class="pushy-content">
               <ul>
-                  <li class="pushy-link"><a href="#chi-siamo">#SKYSANDVOLLEY</a></li>
+                  <li class="pushy-link"><a href="/index.html#chi-siamo">#SKYSANDVOLLEY</a></li>
                   <li class="pushy-link"><a href="/u16.html">U16</a></li>
-                  <li class="pushy-link"><a href="#location">LOCATION</a></li>
+                  <li class="pushy-link"><a href="/index.html#location">LOCATION</a></li>
               </ul>
           </div>
       </nav>
@@ -54,13 +54,13 @@
                           <div class="collapse navbar-collapse" id="navbarSupportedContent">
                               <ul class="navbar-nav mr-auto">
                                   <li class="nav-item">
-                                      <a class="nav-link" href="#chi-siamo">#SKYSANDVOLLEY</a>
+                                      <a class="nav-link" href="/index.html#chi-siamo">#SKYSANDVOLLEY</a>
                                   </li>
                                   <li class="nav-item">
                                       <a class="nav-link" href="/u16.html">U16</a>
                                   </li>
                                   <li class="nav-item">
-                                      <a class="nav-link" href="#location">LOCATION</a>
+                                      <a class="nav-link" href="/index.html#location">LOCATION</a>
                                   </li>
                               </ul>
                           </div>
@@ -81,7 +81,101 @@
             <div class="divider"></div>
         </div>
 
-        
+        <section id="interna">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>#SKYSANDVOLLEY</h1>
+                        <h2>Terzo circuito SKYSAND</h2>
+                        <p>
+                            Da quest'anno grande novità per la categoria <b>FEMMINILE</b> che vedrà alternarsi la classica formula 3x3 dello #skysandvolley alla formula 2x2 del beach volley.<br>
+                            La classifica generale rimarrà unica, le formule 3x3 e 2x2 femminili, si alterneranno fra le varie tappe del circuito.
+                        </p>
+                        <p>
+                            Per quanto riguarda la categoria <b>MASCHILE</b> invece, le novità saranno a livello di tesseramenti: le squadre, con la classica formula 3x3 dello skysand, potranno essere composte da:<br>
+                            • 2 giocatori massimo serie C;<br>
+                            • 1 giocatore OPEN.
+                        </p>
+                        <h2> Regolamento SKYSAND </h2>
+                        <div class="paragrafo">
+                            <ul>
+                                <li>
+                                    Per la formula 3x3 verrà applicato il regolamento INDOOR;
+                                </li>
+                                <li>
+                                    Per la formula 2x2 verrà applicato il regolamento del beach volley;
+                                </li>
+                                <li>
+                                    CERTIFICATO MEDICO: è obbligatorio avere almeno il certificato di sana e robusta costituzione (non agonistico).
+                                </li>
+                                <li>
+                                    LIMITI TESSERAMENTI:<br>
+                                    Maschile: Limite Serie C + 1 OPEN;<br>
+                                    Femminile: OPEN;
+                                </li>
+                                <li>
+                                    ARBITRAGGIO: Le partite saranno tutte auto arbitrate, quindi per qualsiasi dubbio risolvere sempre con palla contesa.
+                                </li>
+                                <li>
+                                    Squadre con RISERVE: I giocatori che iniziano il set lo devono anche finire, non sono disponibili quindi sostituzioni durante un set (salvo caso di infortunio però a quel punto il giocatore infortunato non potrà più prendere parte ad alcuna gara della tappa in corso).
+
+                                </li>
+                                <li>
+                                    TIMEOUT: ogni squadra ha a disposizione un solo timeout per set.
+                                </li>
+                                <li>
+                                    INVASIONI: tutta la rete è considerata invasione; non esiste il fallo di invasione sotto rete se non per disturbo della squadra avversaria.
+                                </li>
+                                <li>
+                                    TABELLONE SKYSAND:<br>
+                                    Maschile: MAX 16 squadre - inizio gare ore 9.30 - briefing ore 9.15;<br>
+                                    Femminile: MAX 8 squadre - inizio gare ore 15.00 - ritrovo ore 14.30.
+                                </li>
+                            </ul>
+                        </div>
+                        <h2>Costi SKYSAND</h2>
+                        <div class="paragrafo">
+                            <ul>
+                                <li>
+                                    Iscrizione al circuito (solo alla prima tappa cui si prende parte): € 5.00 a testa;
+                                </li>
+                                <li>
+                                    Iscrizione alla tappa:<br>
+                                    • Entro il giovedì prima del torneo ore 13.00 con Satispay a Patrick (<a href="tel:3394359320">339 4359320</a>) € 5.00, non rimborsabili, a testa;<br>
+                                    • Il giorno stesso del torneo: € 10.00 a testa;
+                                </li>
+                                <li>
+                                    Pranzo convenzionato obbligatorio € 5.00 da pagare il giorno del torneo.
+                                </li>
+                            </ul>
+                        </div>
+                        <h2>Classifica SKYSAND</h2>
+                        <div class="paragrafo">
+                            Per la classifica del circuito verranno applicati dei punteggi individuali sulla base dei piazzamenti di ogni singola tappa:<br>
+                            L’iscrizione alla tappa (senza ottenere le posizioni che valgono punti) vale 1pt a testa.<br>
+                            Punteggi:
+                            <ul>
+                                <li>1^ classificata - 25pt a testa</li>
+                                <li>2^ classificata - 20pt a testa</li>
+                                <li>3^ classificata - 15pt a testa</li>
+                                <li>4^ classificata - 12pt a testa</li>
+                                <li>5^ classificata - 10pt a testa</li>
+                                <li>6^ classificata - 8pt a testa</li>
+                                <li>7^ classificata - 6pt a testa</li>
+                                <li>8^ classificata - 4pt a testa</li>
+                            </ul>
+                        </div>
+                        <p>
+                            Sia per il circuito femminile, che per quello maschile, verranno premiati i <b>primi 6</b> atleti classificati al termine del circuito.
+                            <br>
+                            Il montepremi complessivo per il circuito SKYSAND, maschile e femminile, è del valore di € 750.00
+                            <br>
+                            Per ogni singola tappa invece verranno premiate le prime 5 squadre del tabellone gold e la prima del tabellone silver.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <div class="w-100">
             <div class="divider"></div>
