--- a/app/u16.html
+++ b/app/u16.html
@@ -94,7 +94,7 @@
                         <p>
                             Verranno premiati i primi 6 classificati del circuito!!!<br>
                             Ad ogni tappa verranno premiate le prime 3 squadre classificate del tabellone gold e la prima del tabellone silver.<br>
-                            Verrà inoltre sempre premiata la squadra più giovane della tappa in corso.<br>
+                            Verrà inoltre sempre premiata la <b>squadra più giovane</b> della tappa in corso.<br>
                             Si riceverà quindi un premio di squadra ad ogni tappa, e un premio individuale per i primi 6 atleti classificati all'interno del circuito.
                         </p>
                         <p>
@@ -129,16 +129,9 @@
                                 <li>8^ classificata - 4pt a testa</li>
                             </ul>
                         </div>
-                        <div class="paragrafo">Premiazioni circuito <i>#U16SKYSANDVOLLEY</i> • Montepremi € 250.00 (in premi):
-                            <ul>
-                                <li>1° - € 90.00</li>
-                                <li>2° - € 60.00</li>
-                                <li>3° - € 45.00</li>
-                                <li>4° - € 30.00</li>
-                                <li>5° - € 15.00</li>
-                                <li>6° - € 10.00</li>
-                            </ul>
-                        </div>
+                        <p>
+                            Il <b>Montepremi</b> del circuito <i>#U16SKYSANDVOLLEY</i> è di € 250.00 (in premi)
+                        </p>
                         <p>
                             In caso di più atleti a parimerito in classifica generale, verranno divisi i premi per il numero di ateti con lo stesso punteggio.<br>
                             Es: 3 atleti classificati 1°, 2° e 3° a parimerito, si divideranno i primi 3 premi della classifica generale<br>
