aggiornata mail ed aggiunto poster

--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,16 @@
             </div>
         </section>
 
+        <section id="poster">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="images/poster.jpg" alt="poster" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <div class="w-100">
             <div class="divider"></div>
         </div>
@@ -194,7 +204,7 @@
                             </div>
                             <div class="col-md-7 col-10">
                                 <p><b>Email</b><br>
-                                    <a href="mailto:info@skysandvolley.it">info@skysandvolley.it</a>
+                                    <a href="mailto:skysandvolley@gmail.com">skysandvolley@gmail.com</a>
                                 </p>
                             </div>
                         </div>
