--- a/app/u16.html
+++ b/app/u16.html
@@ -181,7 +181,7 @@
                             </div>
                             <div class="col-md-7 col-10">
                                 <p><b>Email</b><br>
-                                    <a href="mailto:info@skysandvolley.it">info@skysandvolley.it</a>
+                                    <a href="mailto:skysandvolley@gmail.com">skysandvolley@gmail.com</a>
                                 </p>
                             </div>
                         </div>
