--- a/app/index.html
+++ b/app/index.html
@@ -96,8 +96,36 @@
                         <p>Grandi novità per l'estate 2019. Il montepremi complessivo sarà del valore di € 1000.
                             Da quest'anno il circuito estivo Marinamore Skysandvolley prevede 2 differenti categorie:</p>
                         <ul>
-                            <li>Skysand - 3x3 M/F e 2x2 F </li>
-                            <li>U16 - 3x3 M (max classe 2003)
+                            <li><b>Skysand</b> - 3x3 M/F e 2x2 F </li>
+                            <ul>
+                                <li>3x3 M (2 serie C + 1 Open):</li>
+                                    <ul>
+                                        <li><strong>23-06</strong></li>
+                                        <li><strong>7/07</strong></li>
+                                        <li><strong>21/07</strong></li>
+                                        <li><strong>4/08</strong></li>
+                                        <li><strong>18/08</strong></li>
+                                    </ul>
+                                <li>3x3 F (Open):</li>
+                                    <ul>
+                                        <li><strong>23-06</strong></li>
+                                        <li><strong>21/07</strong></li>
+                                        <li><strong>18/08</strong></li>
+                                    </ul>
+                                <li>2x2 F (Open):</li>
+                                    <ul>
+                                        <li><strong>7/07</strong></li>
+                                        <li><strong>4/08</strong></li>
+                                    </ul>
+                            </ul>
+                            <li><b>U16</b> - 3x3 M (fino al 2003):</li>
+                            <ul>
+                                <li><strong>29-06</strong></li>
+                                <li><strong>13-07</strong></li>
+                                <li><strong>27-07</strong></li>
+                                <li><strong>10-08</strong></li>
+                                <li><strong>24-08</strong></li>
+                            </ul>
                         </ul>
 
                         <p>
