--- a/app/index.html
+++ b/app/index.html
@@ -95,39 +95,109 @@
                         <h2>MONTEPREMI per il valore di € 1000</h2>
                         <p>Grandi novità per l'estate 2019. Il montepremi complessivo sarà del valore di € 1000.
                             Da quest'anno il circuito estivo Marinamore Skysandvolley prevede 2 differenti categorie:</p>
-                        <ul>
-                            <li><b>Skysand</b> - 3x3 M/F e 2x2 F </li>
-                            <ul>
-                                <li>3x3 M (2 serie C + 1 Open):</li>
-                                    <ul>
-                                        <li><strong>23-06</strong></li>
-                                        <li><strong>7/07</strong></li>
-                                        <li><strong>21/07</strong></li>
-                                        <li><strong>4/08</strong></li>
-                                        <li><strong>18/08</strong></li>
-                                    </ul>
-                                <li>3x3 F (Open):</li>
-                                    <ul>
-                                        <li><strong>23-06</strong></li>
-                                        <li><strong>21/07</strong></li>
-                                        <li><strong>18/08</strong></li>
-                                    </ul>
-                                <li>2x2 F (Open):</li>
-                                    <ul>
-                                        <li><strong>7/07</strong></li>
-                                        <li><strong>4/08</strong></li>
-                                    </ul>
-                            </ul>
-                            <li><b>U16</b> - 3x3 M (fino al 2003):</li>
-                            <ul>
-                                <li><strong>29-06</strong></li>
-                                <li><strong>13-07</strong></li>
-                                <li><strong>27-07</strong></li>
-                                <li><strong>10-08</strong></li>
-                                <li><strong>24-08</strong></li>
-                            </ul>
-                        </ul>
+                    </div>
+                </div>
+                <div class="categorie">
+                    <div class="row categorie1">
+                        <div class="col-md-12">
+                            <h2>Skysand <span>3x3 M/F e 2x2 F</span></h2>
+                        </div>
+                    </div>
+                    <div class="row categorie2">
+                        <div class="col-md-12">
+                            <h3>3x3 M (2 serie C + 1 Open)</h3>
+                        </div>
+                    </div>
+                    <div class="row categorie3">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-2">
+                            <label>23-06</label>
+                        </div>
+                        <div class="col-md-2">
+                            <label>7/07</label>
+                        </div>
+                        <div class="col-md-2">
+                            <label>21/07</label>
+                        </div>
+                        <div class="col-md-2">
+                            <label>4/08</label>
+                        </div>
+                        <div class="col-md-2">
+                            <label>18/08</label>
+                        </div>
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-left">
+                            <div class="row categorie2">
+                                <div class="col-md-12">
+                                    <h3>3x3 F (Open)</h3>
+                                </div>
+                            </div>
+                            <div class="row categorie3">
+                                <div class="col-md-4">
+                                    <label>23-06</label>
+                                </div>
+                                <div class="col-md-4">
+                                    <label>21/07</label>
+                                </div>
+                                <div class="col-md-4">
+                                    <label>18/08</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-right">
+                            <div class="row categorie2">
+                                <div class="col-md-12">
+                                    <h3>2x2 F (Open)</h3>
+                                </div>
+                            </div>
+                            <div class="row categorie3">
+                                <div class="col-md-2"></div>
+                                <div class="col-md-4">
+                                    <label>7/07</label>
+                                </div>
+                                <div class="col-md-4">
+                                    <label>4/08</label>
+                                </div>
+                                <div class="col-md-2"></div>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="row categorie1">
+                        <div class="col-md-12">
+                            <h2>U16</h2>
+                        </div>
+                    </div>
+                    <div class="row categorie2">
+                        <div class="col-md-12">
+                            <h3>3x3 M (fino al 2003)</h3>
+                        </div>
+                    </div>
+                    <div class="row categorie3">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-2">
+                            <label>29-06</label>
+                        </div>
+                        <div class="col-md-2">
+                            <label>13-07</label>
+                        </div>
+                        <div class="col-md-2">
+                            <label>27-07</label>
+                        </div>
+                        <div class="col-md-2">
+                            <label>10-08</label>
+                        </div>
+                        <div class="col-md-2">
+                            <label>24-08</label>
+                        </div>
+                        <div class="col-md-1"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
                         <p>
                             Il punteggio valido per la classifica finale, sarà considerato individuale, quindi sarà possibile cambiare squadra ad ogni tappa.
                             Verranno premiati i primi 6 classificati di ogni categoria!!!
